# bandcamp

./: .flake8  .gitignore  README.md  api.py  artists.db  cli.py  db.py  music_data.py  pyproject.toml  run.sh  test_api.py  todo.md
.github/workflows/: python.yml
src/bc_agent/: __init__.py  api.py  cli.py  db.py  main.py  model.py  music_data.py
src/mypackage/: __init__.py  api.py  cli.py  db.py  music_data.py
tests/: test_api.py  test_music_data.py
